# my-menu-backend

./: README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0ff8ee3c18cc_ingredient_unique.py  139eaaed943b_init.py  3343e382e6cd_dish_choose.py  79bc8fb239fc_dishes_bug_fix.py  7fba5c138671_fix_relation.py  acb351e39f7c_dishes_bug_fix.py  c5fd14badd03_taste.py  f89330e9c104_internal_multi_to_multi.py
config/: detail_loguru.py  request_loguru.py  settings.py
db/: mysql_conn.py  redis_conn.py
dependcy/: mysql_conn_denp.py  redis_conn_denp.py
models/: config.py  dish_ingredient.py  dish_taste.py  dishes.py  er_diagram.md  ingredients.py  orders.py  orders_detail.py  orders_master.py  taste.py  user.py  user_extend.py
services/: dishes_join_services.py
test/test_config/: test_settings.py
test/test_service/: test_dishes_join_services.py
