[project]
name = "my-menu-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.2",
    "fastapi[standard]>=0.116.0",
    "pydantic-settings>=2.10.1",
    "pymysql>=1.1.1",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
]
